# libmpack

./: meson.build
src/: meson.build
test/: meson.build  mpack.c
